# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name                        = "bookmarks2md"
version                     = "0.0.0-git"
publish                     = false
edition                     = "2021"
#rust-version                = "1.83.0" # TODO: dump to minimum supported rust version

license                     = "Apache-2.0 OR MIT"
authors                     = ["MaulingMonkey <git@maulingmonkey.com>"]
repository                  = "https://github.com/MaulingMonkey/bookmarks2md"
#documentation               = ""

readme                      = "Readme.md"
description                 = "Export browser bookmarks to markdown file"
categories                  = ["command-line-utilities"] # https://crates.io/category_slugs
#                             "encoding" ?
#keywords                    = ["..."]

[package.metadata.docs.rs] # https://docs.rs/about/metadata

[dependencies]
serde_json                  = "1.0.134"

[profile.release]
debug                       = true
